--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <p><i class="fas fa-envelope"></i> <a href="mailto:puneet.jain@ph.iitr.ac.in">puneet.jain@ph.iitr.ac.in</a></p>
                         <p><i class="fas fa-globe"></i> <a href="https://ph.iitr.ac.in/">www.ph.iitr.ac.in/</a></p>
                         <p><i class="fab fa-orcid"></i> <a href="https://orcid.org/your-ORCID-id" target="_blank">ORCID Profile</a></p>
-                        <p><i class="fa-brands fa-google-scholar"></i> <a href="https://scholar.google.com/citations?user=ID" target="_blank">Google Scholar</a></p>
+                        <p><i class="fa-brands fa-google-scholar"></i> <a href="https://scholar.google.com/citations?user=ID" target="_blank">Google Scholar Profile</a></p>
                     </div>
                 </div>
             </aside>
