--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <img src="portrait.jpeg" alt="Prof. Puneet Jain" class="portrait">
                     <div class="contact-details">
                         <p class="designation">Assistant Professor</p>
-                        <p class="phd-info"><i class="fas fa-graduation-cap"></i>PhD - KEK Laboratory,<br> Japan</p>
+                        <p class="phd-info"><i class="fas fa-graduation-cap"></i><span>PhD - KEK Laboratory,<br> Japan</span></p>
                         <p class="address"><i class="fas fa-map-marker-alt"></i><span>Room - 304, Department of Physics<br>IIT Roorkee<br>Roorkee, 247667, India</span></p>
                         <p><i class="fas fa-phone"></i> (91) 1332 284787 </p>
                         <p><i class="fas fa-envelope"></i> <a href="mailto:puneet.jain@ph.iitr.ac.in">puneet.jain@ph.iitr.ac.in</a></p>
