--- a/index.html
+++ b/index.html
@@ -1,50 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Academic Website</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div class="page-wrapper">
-        <div class="top-section">
-            <img src="iitr_logo.png" alt="University Logo" class="university-logo">
-        </div>
-        <div class="container">
-            <div class="sidebar">
-                <a href="#home">Home</a>
-                <a href="#research">Research Areas</a>
-                <a href="#people">Team Members</a>
-                <a href="#publications">Publications</a>
-                <a href="https://ph.iitr.ac.in/">Department of Physics</a>
-            </div>
-            <div class="content">
-                <div class="intro">
-                    <h2>Welcome</h2>
-                    <p>Hello! I am Your Name, a Physicist and Researcher at IIT Roorkee. My work focuses on [your research topic]. This website provides an overview of my research, team, publications, and contact information. Explore the sections to learn more about my contributions to the field of physics.</p>
-                </div>
-            </div>
-            <div class="right-sidebar">
-                <img src="portrait.jpeg" alt="Your Portrait" class="portrait">
-                <div class="contact-details">
-                    <p><strong>Prof. Puneet Jain</strong></p>
-                    <p>Department of Physics</p>
-                    <p>Indian Institute of Technology Roorkee</p>
-                    <p>Roorkee, Uttarakhand 247667, India</p>
-                    <p>Phone: (91) 9368932927</p>
-                    <p>Email: puneet.jain@ph.iitr.ac.in</p>
-                    <p>Homepage: <a href="https://ph.iitr.ac.in/">www.ph.iitr.ac.in/</a></p>
-                </div>
-            </div>
-        </div>
-        <footer>
-            <p>© 2025 Your Name. All Rights Reserved.</p>
-        </footer>
-    </div>
-</body>
-</html> -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -75,7 +28,7 @@
                     <li><a href="#people"><i class="fas fa-users"></i> Team Members</a></li>
                     <li><a href="#publications"><i class="fas fa-book"></i> Publications</a></li>
                     <li><a href="https://ph.iitr.ac.in/"><i class="fas fa-university"></i> Department</a></li>
-                    <li><a href="#Useful Links"><i class="fas fa-link"></i> Useful Links</a></li>
+                    <li><a href="#useful-links"><i class="fas fa-link"></i> Useful Links</a></li>
                 </ul>
             </nav>
 
@@ -97,7 +50,7 @@
                         <p><i class="fas fa-envelope"></i> <a href="mailto:puneet.jain@ph.iitr.ac.in">puneet.jain@ph.iitr.ac.in</a></p>
                         <p><i class="fas fa-globe"></i> <a href="https://ph.iitr.ac.in/">www.ph.iitr.ac.in/</a></p>
                         <p><i class="fab fa-orcid"></i> <a href="https://orcid.org/your-ORCID-id" target="_blank">ORCID Profile</a></p>
-                        <p><i class="fa-brands fa-google-scholar"></i> <a href="https://scholar.google.com/citations?user=ID" target="_blank">Google Scholar Profile</a></p>
+                        <p><i class="fab fa-google"></i> <a href="https://scholar.google.com/citations?user=ID" target="_blank">Google Scholar Profile</a></p>
                     </div>
                 </div>
             </aside>
