--- a/useful_links.html
+++ b/useful_links.html
@@ -31,7 +31,7 @@
                     <li><a href="people.html"><i class="fas fa-users"></i> Team Members</a></li>
                     <li><a href="publications.html"><i class="fas fa-book"></i> Publications</a></li>
                     <li><a href="https://ph.iitr.ac.in/"><i class="fas fa-university"></i> Department</a></li>
-                    <li><a href="useful-links.html" class="active"><i class="fas fa-link"></i> Useful Links</a></li>
+                    <li><a href="useful_links.html" class="active"><i class="fas fa-link"></i> Useful Links</a></li>
                 </ul>
             </nav>
 
