--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <div class="container">
             <nav class="sidebar">
                 <ul>
-                    <li><a href="#home"><i class="fas fa-home"></i> Home</a></li>
-                    <li><a href="#research"><i class="fas fa-flask"></i> Research Areas</a></li>
-                    <li><a href="#people"><i class="fas fa-users"></i> Team Members</a></li>
-                    <li><a href="#publications"><i class="fas fa-book"></i> Publications</a></li>
+                    <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+                    <li><a href="research.html"><i class="fas fa-flask"></i> Research Areas</a></li>
+                    <li><a href="people.html"><i class="fas fa-users"></i> Team Members</a></li>
+                    <li><a href="publications.html"><i class="fas fa-book"></i> Publications</a></li>
                     <li><a href="https://ph.iitr.ac.in/"><i class="fas fa-university"></i> Department</a></li>
                     <li><a href="#useful_links.html"><i class="fas fa-link"></i> Useful Links</a></li>
                 </ul>
